fix sidebar on mobile

--- a/src/sass/global/_filter.scss
+++ b/src/sass/global/_filter.scss
@@ -7,7 +7,6 @@
 	padding-bottom: 1rem;
 	overflow: auto;
 	width: 100%;
-	@include box-shadow;
 	@include media-breakpoint-down(xs){
 		padding-top: 70px;
 		position: fixed;
@@ -82,57 +81,7 @@
 		}
 	}
 }
-.celebrity-list{
-	width: 100%;
-	margin: .5rem 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	flex-wrap: wrap;
-	.celebrity-item{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		text-decoration: none;
-		.img-round{
-			border-radius: 50%;
-			overflow: hidden;
-			background: red;
-			width: 65px;
-			height: 65px;
-			@include media-breakpoint-down(sm){
-				width: 40px;
-				height: 40px;
-			}
-			img{
-				width: 100%;
-				height: 100%;
-				display: block;
-			}
-		}
-		.celebriry-name{
-			color: $gray;
-			font-size: .8rem;
-			text-transform: none;
-		}
-		&:hover{
-			.img-round{
-				@include box-shadow-hover;
-			}
-			.celebriry-name{
-				text-underline-color: $gray;
-			}
-		}
-	}
-	.celebrity-item+.celebrity-item{
-		margin-left: 30px;
-		&:nth-child(4n + 1){
-			margin-left: 0;
-		}
-	}
 
-}
 
 .colorList{
 	display: flex;
