--- a/src/sass/global/_materials.scss
+++ b/src/sass/global/_materials.scss
@@ -7,6 +7,9 @@
 		&-item{
 			padding: 5px 0;
 			width: 32%;
+			@include media-breakpoint-down(sm){
+				width: 50%;
+			}
 		}
 		&-link{
 			display: block;
@@ -15,6 +18,7 @@
 			height: 50px;
 			border-radius: 4px;
 			overflow: hidden;
+			margin: 0 auto;
 			span {
 				position: absolute;
 				text-transform: none;
